[package]
name = "my_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
rlibc = "1.0"
spin = "0.10.0"
uart_16550 = "0.6.0"
volatile = "0.6.1"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "my_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33
test-timeout = 300